# shepherd

./: README.md  build.sh
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  shepherd.edl
server/enclave/: CMakeLists.txt  enc.c  helloevm.cpp  helloevm.h
server/host/: CMakeLists.txt  host.c  host.cpp
